--- a/src/res/locales/app.ca-ES.po
+++ b/src/res/locales/app.ca-ES.po
@@ -149,45 +149,45 @@ msgstr "Ignorar a un usuari"
 msgid "connection_channel"
 msgstr "Canal"
 
-#: week
+#: {{count}} week
 msgid "week"
-msgstr "setmana"
+msgstr "{{count}} setmana"
 
-#: weeks
+#: {{count}} weeks
 msgid "week_plural"
-msgstr "setmanes"
+msgstr "{{count}} setmanes"
 
-#: day
+#: {{count}} day
 msgid "day"
-msgstr "dia"
+msgstr "{{count}} dia"
 
-#: days
+#: {{count}} days
 msgid "day_plural"
-msgstr "dies"
+msgstr "{{count}} dies"
 
-#: hour
+#: {{count}} hour
 msgid "hour"
-msgstr "hora"
+msgstr "{{count}} hora"
 
-#: hours
+#: {{count}} hours
 msgid "hour_plural"
-msgstr "hores"
+msgstr "{{count}} hores"
 
-#: minute
+#: {{count}} minute
 msgid "minute"
-msgstr "minut"
+msgstr "{{count}} minut"
 
-#: minutes
+#: {{count}} minutes
 msgid "minute_plural"
-msgstr "minuts"
+msgstr "{{count}} minuts"
 
-#: second
+#: {{count}} second
 msgid "second"
-msgstr "segon"
+msgstr "{{count}} segon"
 
-#: seconds
+#: {{count}} seconds
 msgid "second_plural"
-msgstr "segons"
+msgstr "{{count}} segons"
 
 #: General
 msgid "settings_general"
