--- a/src/res/locales/app.es-ES.po
+++ b/src/res/locales/app.es-ES.po
@@ -149,45 +149,45 @@ msgstr "Ignorar usuario"
 msgid "connection_channel"
 msgstr "Sala"
 
-#: week
+#: {{count}} week
 msgid "week"
-msgstr "semana"
+msgstr "{{count}} semana"
 
-#: weeks
+#: {{count}} weeks
 msgid "week_plural"
-msgstr "semanas"
+msgstr "{{count}} semanas"
 
-#: day
+#: {{count}} day
 msgid "day"
-msgstr "día"
+msgstr "{{count}} día"
 
-#: days
+#: {{count}} days
 msgid "day_plural"
-msgstr "días"
+msgstr "{{count}} días"
 
-#: hour
+#: {{count}} hour
 msgid "hour"
-msgstr "hora"
+msgstr "{{count}} hora"
 
-#: hours
+#: {{count}} hours
 msgid "hour_plural"
-msgstr "horas"
+msgstr "{{count}} horas"
 
-#: minute
+#: {{count}} minute
 msgid "minute"
-msgstr "minuto"
+msgstr "{{count}} minuto"
 
-#: minutes
+#: {{count}} minutes
 msgid "minute_plural"
-msgstr "minutos"
+msgstr "{{count}} minutos"
 
-#: second
+#: {{count}} second
 msgid "second"
-msgstr "segundo"
+msgstr "{{count}} segundo"
 
-#: seconds
+#: {{count}} seconds
 msgid "second_plural"
-msgstr "segundos"
+msgstr "{{count}} segundos"
 
 #: General
 msgid "settings_general"
