--- a/src/res/locales/app.uk-UA.po
+++ b/src/res/locales/app.uk-UA.po
@@ -149,45 +149,45 @@ msgstr "Ігнорувати користувача"
 msgid "connection_channel"
 msgstr "Канал"
 
-#: week
+#: {{count}} week
 msgid "week"
-msgstr "тиждень"
+msgstr "{{count}} тиждень"
 
-#: weeks
+#: {{count}} weeks
 msgid "week_plural"
-msgstr "тижнів"
+msgstr "{{count}} тижнів"
 
-#: day
+#: {{count}} day
 msgid "day"
-msgstr "день"
+msgstr "{{count}} день"
 
-#: days
+#: {{count}} days
 msgid "day_plural"
-msgstr "днів"
+msgstr "{{count}} днів"
 
-#: hour
+#: {{count}} hour
 msgid "hour"
-msgstr "година"
+msgstr "{{count}} година"
 
-#: hours
+#: {{count}} hours
 msgid "hour_plural"
-msgstr "годин"
+msgstr "{{count}} годин"
 
-#: minute
+#: {{count}} minute
 msgid "minute"
-msgstr "хвилина"
+msgstr "{{count}} хвилина"
 
-#: minutes
+#: {{count}} minutes
 msgid "minute_plural"
-msgstr "хвилин"
+msgstr "{{count}} хвилин"
 
-#: second
+#: {{count}} second
 msgid "second"
-msgstr "секунда"
+msgstr "{{count}} секунда"
 
-#: seconds
+#: {{count}} seconds
 msgid "second_plural"
-msgstr "секунд"
+msgstr "{{count}} секунд"
 
 #: General
 msgid "settings_general"
