- Added in a global 'u-talbe' class to the themes - Did some cleaning up of the advanced settings - Some small spacing / padding clean up on the table

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -348,6 +348,10 @@ msgstr "Setting Name"
 msgid "settings_advanced_status"
 msgstr "Status"
 
+#: Reset
+msgid "settings_advanced_value"
+msgstr "Reset"
+
 #: Value
 msgid "settings_advanced_value"
 msgstr "Value"
