--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -104,6 +104,13 @@ msgstr "Yes"
 msgid "no"
 msgstr "No"
 
+#: Not found.
+msgid "not_found"
+msgstr "Not found."
+
+#: Warning!
+msgid "warning"
+msgstr "Warning!"
 
 #: This will close all Kiwi IRC conversations. Are you sure you want to close this window?
 msgid "window_unload"
@@ -324,10 +331,6 @@ msgstr "Default kick reason"
 msgid "settings_advanced_title"
 msgstr "Advanced Settings"
 
-#: Warning
-msgid "settings_advanced_warning_title"
-msgstr "Warning"
-
 #: Monsters be here, only click this button if you know what your doing
 msgid "settings_advanced_warning"
 msgstr "Monsters be here, only click this button if you know what your doing"
@@ -347,10 +350,6 @@ msgstr "Reset"
 #: Filter
 msgid "settings_advanced_filter"
 msgstr "Filter"
-
-#: Not found.
-msgid "settings_advanced_noresult"
-msgstr "Not found."
 
 
 
