--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -331,17 +331,17 @@ msgstr "Default kick reason"
 msgid "settings_advanced_title"
 msgstr "Advanced Settings"
 
-#: Monsters be here, only click this button if you know what your doing
+#: Monsters be here, only click this button if you know what you are doing
 msgid "settings_advanced_warning"
-msgstr "Monsters be here, only click this button if you know what your doing"
+msgstr "Monsters be here, only click this button if you know what you are doing"
 
 #: Enable Advanced Settings
 msgid "settings_advanced_button"
 msgstr "Enable Advanced Settings"
 
-#: Danger Zone: Changing some of these settings can break Kiwi IRC!
+#: Danger Zone: Changing some of these settings may break things!
 msgid "settings_advanced_header"
-msgstr "Danger Zone: Changing some of these settings can break Kiwi IRC!"
+msgstr "Danger Zone: Changing some of these settings may break things!"
 
 #: Reset
 msgid "settings_advanced_reset"
