Show an error if /join is used without a channel

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -796,6 +796,13 @@ msgstr "Ban and kick from the channel"
 
 
 
+#: Errors
+
+#: Please specify a channel to join. eg /join #example
+msgid "error_no_channel_join"
+msgstr "Please specify a channel to join. eg /join #example"
+
+
 
 #: Mode Changes $t('modes_')
 
