--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -148,6 +148,11 @@ msgstr "Ignore user"
 msgid "connection_channel"
 msgstr "Channel"
 
+#: Topic set by {{who}} on {{when}}
+msgid "topic_setby"
+msgstr "Topic set by {{who}} on {{when}}"
+
+
 
 #: Durations
 
