Message list text (#604)
* - Commiting linted messageList files

* - String translation
- Wired up the option

* Cleaned up the select and aligned it to the right

* Actually working

* Message spacing for ease of reading

* Double click nicks to mention on message-text layout

* HTML restructure to match other message layouts

* Linting

* cleaner syntax

* Style tweaks; Re-implementing userbox toggle

* Rename message layout text to inline

* inline traffic message styling

* Inline connection message styling

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -211,6 +211,10 @@ msgstr "Refresh Theme"
 msgid "settings_themeurl"
 msgstr "Theme URL"
 
+#: Message Layout
+msgid "settings_messagelayout"
+msgstr "Message Layout"
+
 #: Use monospace
 msgid "settings_use_monospace"
 msgstr "Use monospace"
