--- a/src/res/locales/app.el-GR.po
+++ b/src/res/locales/app.el-GR.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: kiwiirc <darren@kiwiirc.com>\n"
 "Language-Team: Greek\n"
 "Language: el_GR\n"
-"PO-Revision-Date: 2018-12-11 22:51\n"
+"PO-Revision-Date: 2018-12-17 15:50\n"
 
 #: Start
 msgid "start_button"
@@ -63,7 +63,7 @@ msgstr "Όνομα χρήστη"
 
 #: Password
 msgid "password"
-msgstr "Κωδικός"
+msgstr "Συνθηματικό Κλειδί:"
 
 #: I have a password
 msgid "password_have"
@@ -115,7 +115,7 @@ msgstr "Ακύρωση"
 
 #: Yes
 msgid "yes"
-msgstr "Ναί"
+msgstr "Ναι"
 
 #: No
 msgid "no"
@@ -143,7 +143,7 @@ msgstr "Κατάσταση"
 
 #: Is available
 msgid "whois_status_available"
-msgstr "Είναι διαθέσιμο"
+msgstr "Είναι τώρα εντός"
 
 #: Send a message
 msgid "send_a_message"
@@ -207,7 +207,7 @@ msgstr "Γενικά"
 
 #: Theme
 msgid "settings_theme"
-msgstr "Θέμα"
+msgstr "Τρέχον Θέμα:"
 
 #: Refresh Theme
 msgid "refresh_theme"
@@ -303,7 +303,7 @@ msgstr "Ενημέρωσε με όταν"
 
 #: All messages
 msgid "settings_notify_all"
-msgstr "Όλα τα μηνύματα"
+msgstr "Υπάρχουν νέα μηνύματα"
 
 #: I am mentioned
 msgid "settings_notify_mentioned"
@@ -339,7 +339,7 @@ msgstr "Προηγμένες Ρυθμίσεις"
 
 #: Monsters be here, only click this button if you know what you are doing
 msgid "settings_advanced_warning"
-msgstr "Όλα τα τέρατα των ρυθμίσεων είναι εδώ, κάντε κλικ σε αυτό το κουμπί μόνο αν ξέρετε τι πραγματικά πρέπει να κάνετε"
+msgstr "Όλα τα τέρατα των ρυθμίσεων είναι εδώ, κάντε κλικ σε αυτό το κουμπί μόνο αν ξέρετε τι πραγματικά πρέπει να κάνετε..."
 
 #: Enable Advanced Settings
 msgid "settings_advanced_button"
@@ -379,7 +379,7 @@ msgstr "Κανένας δεν είναι προς το παρόν αποκλει
 
 #: Topic
 msgid "channel_topic"
-msgstr "Θέμα"
+msgstr "Τίτλος Καναλιού:"
 
 #: Moderated chat
 msgid "channel_moderated"
@@ -455,7 +455,7 @@ msgstr "Φόρτωση προηγούμενων μηνυμάτων"
 
 #: Unread Messages
 msgid "unread_messages"
-msgstr "Μη Αναγνωσμένα Μηνύματα"
+msgstr "Μη Διαβασμένα Μηνύματα"
 
 #: Server details
 msgid "settings_server_details"
@@ -559,7 +559,7 @@ msgstr "Εμφάνιση όταν εισέρχονται τα άτομα"
 
 #: Show when channel topic changes
 msgid "side_topics"
-msgstr "Εμφάνιση όταν αλλάζει το θέμα του καναλιού"
+msgstr "Εμφάνιση όταν αλλάζει ο τίτλος του καναλιού"
 
 #: Show when users change their nicks
 msgid "side_nick_changes"
@@ -583,7 +583,7 @@ msgstr "Δεν έχει οριστεί ρυθμιστής"
 
 #: There is no topic for this channel
 msgid "no_topic_set"
-msgstr "Δεν υπάρχει θέμα για αυτό το κανάλι"
+msgstr "Δεν υπάρχει τίτλος για αυτό το κανάλι"
 
 #: About
 msgid "about"
@@ -683,7 +683,7 @@ msgstr "Πραγματικό όνομα: {{realname}}"
 
 #: Is a bot
 msgid "user_bot"
-msgstr "Είναι ένα bot"
+msgstr "Είναι ένα ρομπότ"
 
 #: Is available for help
 msgid "user_help"
@@ -735,47 +735,47 @@ msgstr "{{nick}} δίνει χειρισή σε {{target}}"
 
 #: {{nick}} takes ops from {{target}}
 msgid "modes_take_ops"
-msgstr "{{nick}} παίρνει τον χειρισή από {{target}}"
+msgstr "{{nick}} παίρνει το op από {{target}}"
 
 #: {{nick}} gives half-ops to {{target}}
 msgid "modes_give_halfops"
-msgstr "{{nick}} δίνει μισή διαχείριση σε {{target}}"
+msgstr "{{nick}} δίνει halfop σε {{target}}"
 
 #: {{nick}} takes half-ops from {{target}}
 msgid "modes_take_halfops"
-msgstr "{{nick}} παίρνει μισή διαχείριση από {{target}}"
+msgstr "{{nick}} παίρνει μισή χείριση από {{target}}"
 
 #: {{nick}} gives voice to {{target}}
 msgid "modes_give_voice"
-msgstr "{{nick}} δίνει φωνή σε {{target}}"
+msgstr "{{nick}} δίνει voice σε {{target}}"
 
 #: {{nick}} takes voice from {{target}}
 msgid "modes_take_voice"
-msgstr "{{nick}} παίρνει φωνή από {{target}}"
+msgstr "{{nick}} παίρνει το voice από {{target}}"
 
 #: {{nick}} gives admin to {{target}}
 msgid "modes_give_admin"
-msgstr "{{nick}} δίνει διαχείριση σε {{target}}"
+msgstr "{{nick}} δίνει admin σε {{target}}"
 
 #: {{nick}} takes admin from {{target}}
 msgid "modes_take_admin"
-msgstr "{{nick}} παίρνει τον διαχείριση από {{target}}"
+msgstr "{{nick}} παίρνει το admin από {{target}}"
 
 #: {{nick}} gives owner to {{target}}
 msgid "modes_give_owner"
-msgstr "{{nick}} δίνει ιδιόκτηση σε {{target}}"
+msgstr "{{nick}} δίνει owner σε {{target}}"
 
 #: {{nick}} takes owner from {{target}}
 msgid "modes_take_owner"
-msgstr "{{nick}} παίρνει ιδιόκτηση από {{target}}"
+msgstr "{{nick}} παίρνει το owner από {{target}}"
 
 #: {{nick}} has banned {{target}}
 msgid "modes_gives_ban"
-msgstr "{{nick}} δίνει απόκλιση σε {{target}}"
+msgstr "{{nick}} δίνει ban σε {{target}}"
 
 #: {{nick}} has unbanned {{target}}
 msgid "modes_takes_ban"
-msgstr "{{nick}} παίρνει την απόκλιση από {{target}}"
+msgstr "{{nick}} παίρνει το ban από {{target}}"
 
 #: {{nick}} sets {{mode}} on {{target}}
 msgid "modes_other"
@@ -815,7 +815,7 @@ msgstr "Προσκαλέστε κάποιον στο κανάλι"
 
 #: Set the topic for this channel
 msgid "command_topic"
-msgstr "Ορίστε το θέμα για αυτό το κανάλι"
+msgstr "Ορίστε τον τίτλο για αυτό το κανάλι"
 
 #: Send a notice
 msgid "command_notice"
