New Crowdin translations (#777)
* New translations app.dev.po (French)

* New translations app.dev.po (Serbian (Cyrillic))

* New translations app.dev.po (Korean)

* New translations app.dev.po (Norwegian)

* New translations app.dev.po (Polish)

* New translations app.dev.po (Portuguese)

* New translations app.dev.po (Portuguese, Brazilian)

* New translations app.dev.po (Romanian)

* New translations app.dev.po (Russian)

* New translations app.dev.po (Slovenian)

* New translations app.dev.po (Italian)

* New translations app.dev.po (Spanish)

* New translations app.dev.po (Spanish, Argentina)

* New translations app.dev.po (Spanish, United States)

* New translations app.dev.po (Swedish)

* New translations app.dev.po (Turkish)

* New translations app.dev.po (Ukrainian)

* New translations app.dev.po (Vietnamese)

* New translations app.dev.po (Japanese)

* New translations app.dev.po (Indonesian)

* New translations app.dev.po (Bulgarian)

* New translations app.dev.po (Chinese Traditional)

* New translations app.dev.po (Afrikaans)

* New translations app.dev.po (Albanian)

* New translations app.dev.po (Arabic)

* New translations app.dev.po (Basque)

* New translations app.dev.po (Bosnian)

* New translations app.dev.po (Catalan)

* New translations app.dev.po (Chinese Simplified)

* New translations app.dev.po (Czech)

* New translations app.dev.po (Hungarian)

* New translations app.dev.po (Danish)

* New translations app.dev.po (Dutch)

* New translations app.dev.po (English)

* New translations app.dev.po (Finnish)

* New translations app.dev.po (Galician)

* New translations app.dev.po (German)

* New translations app.dev.po (Greek)

* New translations app.dev.po (Hebrew)

* New translations app.dev.po (Latin America)

* New translations app.dev.po (English)

* New translations app.dev.po (French)

* New translations app.dev.po (Serbian (Cyrillic))

* New translations

--- a/src/res/locales/app.pt-PT.po
+++ b/src/res/locales/app.pt-PT.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: kiwiirc <darren@kiwiirc.com>\n"
 "Language-Team: Portuguese\n"
 "Language: pt_PT\n"
-"PO-Revision-Date: 2018-12-11 10:26\n"
+"PO-Revision-Date: 2019-01-13 00:30\n"
 
 #: Start
 msgid "start_button"
@@ -853,9 +853,13 @@ msgstr "Solicite informações sobre alguém"
 msgid "command_whowas"
 msgstr "Solicitar informações sobre alguém que se desconectou recentemente"
 
-#: Mark yourself as away
+#: Set yourself as away
 msgid "command_away"
-msgstr "Marque-se como ausente"
+msgstr "Coloca-o como ausente"
+
+#: Set yourself as active
+msgid "command_back"
+msgstr "Remove o estatuto de ausente (/away)"
 
 #: Change your connection encoding
 msgid "command_encoding"
