--- a/src/res/locales/app.nl-NL.po
+++ b/src/res/locales/app.nl-NL.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: kiwiirc <darren@kiwiirc.com>\n"
 "Language-Team: Dutch\n"
 "Language: nl_NL\n"
-"PO-Revision-Date: 2018-12-11 10:26\n"
+"PO-Revision-Date: 2019-01-13 00:10\n"
 
 #: Start
 msgid "start_button"
@@ -853,9 +853,13 @@ msgstr "Informatie over iemand opvragen"
 msgid "command_whowas"
 msgstr "Informatie over iemand opvragen die onlangs is weggegaan"
 
-#: Mark yourself as away
+#: Set yourself as away
 msgid "command_away"
-msgstr "Jezelf als afwezig markeren"
+msgstr "Jezelf als afwezig instellen"
+
+#: Set yourself as active
+msgid "command_back"
+msgstr "Jezelf als actief instellen"
 
 #: Change your connection encoding
 msgid "command_encoding"
