- Updated wording - Added padlock icon - rearrange order of settings layout

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -447,6 +447,10 @@ msgstr "Display Topic"
 msgid "channel_settings"
 msgstr "Channel Settings"
 
+#: Mods Only
+msgid "mods_only"
+msgstr "Mods Only"
+
 #: Join Channel
 msgid "container_join"
 msgstr "Join Channel"
