ADDITION: add translation strings for 'No results found'

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -112,6 +112,10 @@ msgstr "No"
 msgid "not_found"
 msgstr "Not found."
 
+#: No results found
+msgid "no_results_found"
+msgstr "No results found."
+
 #: Warning!
 msgid "warning"
 msgstr "Warning!"
