--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -954,6 +954,17 @@ msgstr "Ignore messages from somebody"
 msgid "command_unignore"
 msgstr "Stop ignoring somebody"
 
+#: Roll a Dice
+msgid "command_dice"
+msgstr "Roll a Dice"
+
+#: Rolls a
+msgid "dice_roll"
+msgstr "Rolls a"
+
+#: Sided die and gets
+msgid "dice_sides"
+msgstr "Sided die and gets "
 
 
 #: Personal $t('personal_')
