- Updated translation strings - Added format number function to TextFormatting

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -966,6 +966,10 @@ msgstr "Rolls a"
 msgid "dice_sides"
 msgstr "Sided die and gets "
 
+#: Rolls a {{sides}} sided dice and gets {{number}}
+msgid "dice_roll"
+msgstr "Rolls a {{sides}} sided dice and gets {{number}}"
+
 
 #: Personal $t('personal_')
 
