ADD /dice command  (#833)
* - Add /dice command
- Add autocomplete lookup
- Add translation strings

* - Add example of command

* - Updated translation strings
- Added format number function to TextFormatting

* - Remove unused translations

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -954,6 +954,13 @@ msgstr "Ignore messages from somebody"
 msgid "command_unignore"
 msgstr "Stop ignoring somebody"
 
+#: Roll a Dice
+msgid "command_dice"
+msgstr "Roll a Dice"
+
+#: Rolls a {{sides}} sided dice and gets {{number}}
+msgid "dice_roll"
+msgstr "Rolls a {{sides}} sided dice and gets {{number}}"
 
 
 #: Personal $t('personal_')
