New Crowdin translations (#840)
* New translations app.dev.po (Afrikaans)

* New translations app.dev.po (Serbian (Cyrillic))

* New translations app.dev.po (Korean)

* New translations app.dev.po (Norwegian)

* New translations app.dev.po (Polish)

* New translations app.dev.po (Portuguese)

* New translations app.dev.po (Portuguese, Brazilian)

* New translations app.dev.po (Romanian)

* New translations app.dev.po (Russian)

* New translations app.dev.po (Slovenian)

* New translations app.dev.po (Italian)

* New translations app.dev.po (Spanish)

* New translations app.dev.po (Spanish, Argentina)

* New translations app.dev.po (Spanish, United States)

* New translations app.dev.po (Swedish)

* New translations app.dev.po (Turkish)

* New translations app.dev.po (Ukrainian)

* New translations app.dev.po (Vietnamese)

* New translations app.dev.po (Japanese)

* New translations app.dev.po (Indonesian)

* New translations app.dev.po (Albanian)

* New translations app.dev.po (Czech)

* New translations app.dev.po (Arabic)

* New translations app.dev.po (Basque)

* New translations app.dev.po (Bosnian)

* New translations app.dev.po (Bulgarian)

* New translations app.dev.po (Catalan)

* New translations app.dev.po (Chinese Simplified)

* New translations app.dev.po (Chinese Traditional)

* New translations app.dev.po (Danish)

* New translations app.dev.po (Hungarian)

* New translations app.dev.po (Dutch)

* New translations app.dev.po (English)

* New translations app.dev.po (Finnish)

* New translations app.dev.po (French)

* New translations app.dev.po (Galician)

* New translations app.dev.po (German)

* New translations app.dev.po (Greek)

* New translations app.dev.po (Hebrew)

* New translations app.dev.po (Latin America)

* New translations app.dev.po (Dutch)

* New translations app.dev.po (Dutch)

* New translations app.dev.po (Dutch)

* New translations app.dev.po (Gal

--- a/src/res/locales/app.bs-BA.po
+++ b/src/res/locales/app.bs-BA.po
@@ -11,7 +11,7 @@ msgstr ""
 "Last-Translator: kiwiirc <darren@kiwiirc.com>\n"
 "Language-Team: Bosnian\n"
 "Language: bs_BA\n"
-"PO-Revision-Date: 2019-02-19 17:31\n"
+"PO-Revision-Date: 2019-02-22 21:01\n"
 
 #: Start
 msgid "start_button"
@@ -875,11 +875,11 @@ msgstr "Prestani ignorisati nekoga"
 
 #: Roll a Dice
 msgid "command_dice"
-msgstr ""
+msgstr "Baci kocku"
 
 #: Rolls a {{sides}} sided dice and gets {{number}}
 msgid "dice_roll"
-msgstr ""
+msgstr "Bačena je {{sides}} kockica a dobijeni broj je {{number}}"
 
 #: Your IRC client
 msgid "personal_client"
