--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -219,6 +219,10 @@ msgstr "Message Layout"
 msgid "settings_use_monospace"
 msgstr "Use monospace"
 
+#: Use Kiwi as my default IRC client
+msgid "settings_default_handler"
+msgstr "Make Kiwi my default IRC client"
+
 #: Traditional IRC layout
 msgid "settings_layout_compact"
 msgstr "Traditional IRC layout"
@@ -988,6 +992,22 @@ msgstr "They will be here when you come back."
 #: Add a Network
 msgid "personal_add"
 msgstr "Add a Network"
+
+#: You are trying to connect to 
+msgid "personal_connect_to"
+msgstr "You are trying to connect to"
+
+#: Network has been added to your existing Kiwi instance.
+msgid "personal_added_to_existing"
+msgstr "Network has been added to your existing Kiwi instance.";
+
+#: Use existing Kiwi instance
+msgid "personal_add_existing_tab"
+msgstr "Add network to existing Kiwi tab"
+
+#: Use a temporary session
+msgid "personal_connect_temporary"
+msgstr "Use temporary session"
 
 #: Saved networks
 msgid "personal_saved"
