Translation tweaks; Removing US translation

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -225,7 +225,7 @@ msgstr "Use monospace"
 
 #: Use Kiwi as my default IRC client
 msgid "settings_default_handler"
-msgstr "Make Kiwi my default IRC client"
+msgstr "Use Kiwi as my default IRC client"
 
 #: Traditional IRC layout
 msgid "settings_layout_compact"
