Invite manager translations

--- a/src/res/locales/app.dev.po
+++ b/src/res/locales/app.dev.po
@@ -36,6 +36,10 @@ msgstr "Kiwi Settings"
 msgid "channels"
 msgstr "Channels"
 
+#: Access
+msgid "access"
+msgstr "Access"
+
 #: Banned Users
 msgid "banned"
 msgstr "Banned Users"
@@ -423,6 +427,37 @@ msgstr "Refreshing invite list..."
 msgid "invites_nobody"
 msgstr "Nobody is invited!"
 
+#: This is a public channel.
+msgid "invite_public_channel"
+msgstr "This is a public channel."
+
+#: Only invited users can join.
+msgid "invite_private_channel"
+msgstr "Only invited users can join."
+
+#: Only invited users can join.
+msgid "invite_private_channel"
+msgstr "Only invited users can join."
+
+#: Only allow invited users
+msgid "invite_set_private"
+msgstr "Only allow invited users"
+
+#: Allow anybody to join
+msgid "invite_set_public"
+msgstr "Allow anybody to join"
+
+#: Only registered users can join
+msgid "invite_registered_only"
+msgstr "Only registered users can join"
+
+#: Add invite
+msgid "invite_add_invite"
+msgstr "Add invite"
+
+#: (Any registered user)
+msgid "invite_any_registered"
+msgstr "(Any registered user)"
 
 
 #: ChannelInfo $t('channel_')
