--- a/src/res/locales/app.tr-TR.po
+++ b/src/res/locales/app.tr-TR.po
@@ -10,7 +10,7 @@ msgstr ""
 "Last-Translator: Darren Whitlen (kiwiirc)\n"
 "Language-Team: Turkish\n"
 "Language: tr_TR\n"
-"PO-Revision-Date: 2019-06-27 19:14\n"
+"PO-Revision-Date: 2019-07-06 15:01\n"
 
 #: Start
 msgid "start_button"
@@ -48,9 +48,17 @@ msgstr "Kiwi Ayarları"
 msgid "channels"
 msgstr "Kanallar"
 
+#: Access
+msgid "access"
+msgstr "Erişim"
+
 #: Banned Users
 msgid "banned"
 msgstr "Yasaklı Kullanıcılar"
+
+#: Invited Users
+msgid "invited"
+msgstr "Davet Edilen Kullanıcılar"
 
 #: Notifications
 msgid "notifications"
@@ -387,6 +395,58 @@ msgstr "Yasaklananlar listesi yenileniyor..."
 #: Nobody is banned!
 msgid "bans_nobody"
 msgstr "Kimse yasaklanmadı!"
+
+#: Refresh invite list
+msgid "invites_refresh"
+msgstr "Davet listesini yenile"
+
+#: Invited user
+msgid "invites_user"
+msgstr "Davet Edilen Kullanıcı"
+
+#: Invited by
+msgid "invites_by"
+msgstr "Tarafından davet edildi"
+
+#: Refreshing invite list...
+msgid "invites_refreshing"
+msgstr "Davet listesi yenileniyor..."
+
+#: Nobody is invited!
+msgid "invites_nobody"
+msgstr "Kimse davet edilmedi!"
+
+#: This is a public channel.
+msgid "invite_public_channel"
+msgstr "Bu halka açık bir kanal."
+
+#: Only invited users can join.
+msgid "invite_private_channel"
+msgstr "Yalnızca davet edilen kullanıcılar katılabilir."
+
+#: Only invited users can join.
+msgid "invite_private_channel"
+msgstr "Yalnızca davet edilen kullanıcılar katılabilir."
+
+#: Only allow invited users
+msgid "invite_set_private"
+msgstr ""
+
+#: Allow anybody to join
+msgid "invite_set_public"
+msgstr ""
+
+#: Only registered users can join
+msgid "invite_registered_only"
+msgstr ""
+
+#: Add invite
+msgid "invite_add_invite"
+msgstr ""
+
+#: (Any registered user)
+msgid "invite_any_registered"
+msgstr ""
 
 #: Topic
 msgid "channel_topic"
